--- a/zhuoyue-parent/zhuoyue-service/zhuoyue-service-article/pom.xml
+++ b/zhuoyue-parent/zhuoyue-service/zhuoyue-service-article/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>zhuoyue-service-user-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.zhuoyue</groupId>
+            <artifactId>zhuoyue-common-db</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
