--- a/zhuoyue-parent/zhuoyue-service/zhuoyue-service-article/src/main/resources/application.yml
+++ b/zhuoyue-parent/zhuoyue-service/zhuoyue-service-article/src/main/resources/application.yml
@@ -2,12 +2,18 @@ spring:
   application:
     name: article
   datasource:
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.95.119.186:3306/zhuoyue_article?serverTimezone=UTC&characterEncoding=utf8
     hikari:
+      username: root
+      password: 123456
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mysql://47.95.119.186:3306/zhuoyue_article?serverTimezone=UTC&characterEncoding=utf8
       max-lifetime: 30000
+  cloud:
+    alibaba:
+      seata:
+        # 这里要和file.conf文件中一致
+        tx-service-group: my_test_tx_group
+
   main:
     allow-bean-definition-overriding: true
 eureka:
