--- a/zhuoyue-parent/zhuoyue-service/zhuoyue-service-content/pom.xml
+++ b/zhuoyue-parent/zhuoyue-service/zhuoyue-service-content/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>zhuoyue-service-content-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.zhuoyue</groupId>
+            <artifactId>zhuoyue-common-db</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
