--- a/zhuoyue-parent/zhuoyue-service/zhuoyue-service-file/pom.xml
+++ b/zhuoyue-parent/zhuoyue-service/zhuoyue-service-file/pom.xml
@@ -21,5 +21,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.zhuoyue</groupId>
+            <artifactId>zhuoyue-common-db</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
