--- a/zhuoyue-parent/zhuoyue-service/zhuoyue-service-file/src/main/resources/application.yml
+++ b/zhuoyue-parent/zhuoyue-service/zhuoyue-service-file/src/main/resources/application.yml
@@ -4,10 +4,16 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
   datasource:
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.95.119.186:3306/zhuoyue_log?serverTimezone=UTC&characterEncoding=utf8
+    hikari:
+      username: root
+      password: 123456
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mysql://47.95.119.186:3306/zhuoyue_log?serverTimezone=UTC&characterEncoding=utf8
+  cloud:
+    alibaba:
+      seata:
+        # 这里要和file.conf文件中一致
+        tx-service-group: my_test_tx_group
   application:
     name: file
 server:
