--- a/zhuoyue-parent/zhuoyue-service/zhuoyue-service-oauth/pom.xml
+++ b/zhuoyue-parent/zhuoyue-service/zhuoyue-service-oauth/pom.xml
@@ -13,7 +13,11 @@
 
     <description>用户授权微服务</description>
     <dependencies>
-
+        <dependency>
+            <groupId>com.zhuoyue</groupId>
+            <artifactId>zhuoyue-common-db</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
