--- a/zhuoyue-parent/zhuoyue-service/zhuoyue-service-web/pom.xml
+++ b/zhuoyue-parent/zhuoyue-service/zhuoyue-service-web/pom.xml
@@ -21,6 +21,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>com.zhuoyue</groupId>
+            <artifactId>zhuoyue-common-db</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.alibaba.cloud</groupId>
+                    <artifactId>spring-cloud-alibaba-seata</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
+    </dependencies>
 </project>
